--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,34 +2,15 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ "main" ]  # Déclencheur : push sur la branche main
-  workflow_dispatch:      # Permet un déclenchement manuel
+    branches: [ main ]
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Machine virtuelle Ubuntu
-
+    runs-on: ubuntu-latest
     steps:
-      # Étape 1 : Récupération du code
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # Étape 2 : Installation des dépendances (si nécessaire)
-      - name: Install dependencies
-        run: |
-          npm install -g qrcode
-          npm install
-
-      # Étape 3 : Construction du projet (exemple si vous utilisez un builder)
-      - name: Build
-        run: |
-          echo "Aucune étape de build nécessaire pour ce projet HTML statique"
-          # Pour un projet avec React/Vue : npm run build
-
-      # Étape 4 : Déploiement sur GitHub Pages
+      - uses: actions/checkout@v2
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}  # Token automatique
-          publish_dir: ./            # Dossier à déployer (racine)
-          keep_files: false          # Écrase les fichiers existants
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./
