--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,34 @@
 name: Deploy to GitHub Pages
 
-on: [push, workflow_dispatch]
+on:
+  push:
+    branches: [ "main" ]
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
-
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build (if needed)
-        run: echo "No build step for static HTML"
-
-      - name: Upload artifact  # <-- Étape corrigée
-        uses: actions/upload-artifact@v4
-        with:
-          name: web-assets
-          path: |
-            ./*.html
-            ./*.css
-            ./*.js
-            ./assets/
+          path: './'  # Chemin racine contenant index.html
 
       - name: Deploy
+        id: deployment
         uses: actions/deploy-pages@v2
