--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
   pages: write
   id-token: write
 
@@ -18,17 +17,16 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
         with:
-          path: './'  # Chemin racine contenant index.html
-
+          path: './'  # Chemin vers vos fichiers (index.html doit être à la racine)
+      
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v2
