--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
+  contents: write
   pages: write
   id-token: write
 
@@ -17,16 +18,17 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     
     steps:
-      - uses: actions/checkout@v4
-      
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v4
         with:
-          path: './'  # Chemin vers vos fichiers (index.html doit être à la racine)
-      
+          path: './'  # Chemin racine contenant index.html
+
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v2
