--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,11 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
+      # Ne pas utiliser upload-artifact ici
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './'  # ou ./dist, ./build selon ton projet
+          path: './'  # ou ./dist si tu as un dossier de build
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
