--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,14 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload files
+        uses: actions/upload-artifact@v4  # Dernière version stable
         with:
-          path: './'  # Chemin vers vos fichiers (index.html doit être à la racine)
+          name: web-artifacts
+          path: |
+            *.html
+            *.css
+            *.js
 
       - name: Deploy
         id: deployment
