--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,16 +39,19 @@ jobs:
           # Pour des projets avec build : npm run build
 
       - name: Upload files
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
           name: github-pages  # <-- Nom attendu par deploy-pages
-          path: |
-            *.html
-            *.css
-            *.js
+          path: ./
+      - name: Download Build Artifact  
+        uses: actions/download-artifact@v4
+        with: 
+          name: "github-pages" 
+          path: ./
 
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v4
-        with:
+        with: 
+          token: ${{ github.token }}
           artifact_name: github-pages
